--- a/imports/ui/components/login/login.html
+++ b/imports/ui/components/login/login.html
@@ -2,10 +2,10 @@
     <div class="card">
         <div class="card-content">
             <span class="card-title">Login</span>
-            <p>Huersohn musch die ilogge</p>
+            <p>Bitte melden sie sich an.</p>
         </div>
         <div class="card-action">
-            <a href="#"><login-button></login-button></a>
+
         </div>
     </div>
 </div>
