--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -1,13 +1,31 @@
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-        <a id="logo-container" ui-sref="home" class="brand-logo right">MDef</a>
-        <ul class="left">
-            <li><login-buttons></login-buttons></li>
+<nav role="navigation">
+    <a class="nav-wrapper container">
+        <a id="logo-container" ui-sref="home" class="brand-logo right">PFinder</a>
+        <ul class="left hide-on-med-and-down">
+            <li>
+                <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
+            </li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin">Admin</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="login" ng-click="$ctrl.logout()">Logout</a></li>
+            <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
+            <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="login">Login</a></li>
         </ul>
-
         <ul id="nav-mobile" class="side-nav">
-            <li><a ui-sref="home">Home</a></li>
-            <li><a ui-sref="log">Log</a></li>
+            <li>
+                <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
+            </li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin">Admin</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ng-click="$ctrl.logout()">Logout</a></li>
+            <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
+            <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="login">Login</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
