--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -6,7 +6,7 @@
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin">Admin</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
@@ -19,7 +19,7 @@
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin">Admin</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
