--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -5,9 +5,8 @@
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin Kategorie</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-characteristic">Admin Charakteristik</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="login" ng-click="$ctrl.logout()">Logout</a></li>
@@ -18,9 +17,8 @@
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="home">Home</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="log">Log</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-category">Admin Kategorie</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="admin-characteristic">Admin Charakteristik</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="question">Question</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ng-click="$ctrl.logout()">Logout</a></li>
