--- a/imports/ui/components/profile/profile.html
+++ b/imports/ui/components/profile/profile.html
@@ -4,6 +4,7 @@
         <div class="card-content">
             <div class="row">
                 <div class="col m4 s12">
+                    <p ng-repeat="category in $ctrl.categories">{{category.category}}</p>
                 </div>
                 <div class="col m8 s12">
                     <div class="chart-container">
