--- a/imports/ui/components/admin.question.details/admin.question.details.html
+++ b/imports/ui/components/admin.question.details/admin.question.details.html
@@ -1,21 +1,15 @@
 <div class="container">
     <div class="section">
         <ul class="collection with-header">
-            <li class="collection-header"><h4>Fragen</h4></li>
-            <li  class="collection-item" ng-repeat="question in $ctrl.questions">
+            <li class="collection-header"><h4>Fragen - Charakteristik</h4></li>
+            <li  class="collection-item"  ng-repeat="questionsCharacteristic in $ctrl.questionsCharacteristics">
                 <div class="row">
-                    <div class="input-field col s12">
-                        <input placeholder="Frage" ng-model="question.question" ng-blur="$ctrl.update(question)">
+                    <div class="col m4 s12">
+                        {{$ctrl.getCharacteristic(questionsCharacteristic.characteristicId)}}
                     </div>
-                    <div class="input-field col s10">
-                        <input placeholder="Frage-Position" ng-model="question.questionIndex" ng-blur="$ctrl.updateIndex(question)">
+                    <div class="col m8 s12">
+                        <input ng-model="questionsCharacteristic.influence" ng-blur="$ctrl.updateInfluenceValue(questionsCharacteristic);">
                     </div>
-                    <button class="btn btn-large col s2" ng-click="$ctrl.view(question)">
-                        <i class="material-icons">delete</i>
-                    </button>
-                    <button class="btn btn-large col s2" ng-click="$ctrl.remove(question)">
-                        <i class="material-icons">delete</i>
-                    </button>
                 </div>
             </li>
         </ul>
