--- a/imports/ui/components/admin.question/admin.question.html
+++ b/imports/ui/components/admin.question/admin.question.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="section">
         <ul class="collection with-header">
-            <li class="collection-header"><h4>Fragen</h4></li>
+            <li class="collection-header"><h4>Fragen</h4>
+                <button class="btn btn-large right" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></button></li>
             <li class="collection-item" ng-repeat="question in $ctrl.questions">
                 <div class="row">
                     <div class="input-field col s12">
