forgot pw and admin roles

--- a/imports/ui/components/login/login.html
+++ b/imports/ui/components/login/login.html
@@ -5,6 +5,7 @@
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
             <div class="input-field col s12"><button class="waves-effect waves-light btn-large btn-login" ng-click="$ctrl.login()" style="width:100%;">Login</button></div>
             <div class="input-field col s12"><a ui-sref="register" class="waves-effect waves-light btn-flat white-text" style="width:100%;">Register</a></div>
+            <div class="input-field col s12"><a ui-sref="forgotpw" class="waves-effect waves-light btn-flat white-text" style="width:100%;">Passwort vergessen</a></div>
 
         </div>
     </form>
