--- a/imports/ui/components/register/register.html
+++ b/imports/ui/components/register/register.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" class="input-login validate" type="email"></div>
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
-            <div class="input-field col s12"><button class="waves-effect waves-light btn-large center-align" ng-click="$ctrl.register()" style="width:100%;">Register</button></div>
+            <div class="input-field col s12"><button class="waves-effect waves-light btn-large btn-login center-align" ng-click="$ctrl.register()" style="width:100%;">Register</button></div>
         </div>
     </form>
 </div>
