--- a/imports/ui/components/admin.category/admin.category.html
+++ b/imports/ui/components/admin.category/admin.category.html
@@ -1,5 +1,22 @@
 <div class="container">
     <div class="section">
+        <div class="card">
+            <div class="card-content">
+                <h4>Erstellen</h4>
+                <form>
+                    <div class="input-field row">
+                        <input class="input-normal col s8 m10 l10" placeholder="Fragebogen" ng-model="$ctrl.newCategory">
+                        <div class="s4 m2 l2 center-align">
+                            <button class="btn btn-large" ng-click="$ctrl.add({category: $ctrl.newCategory});">
+                                <i class="material-icons">note_add</i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="section">
         <ul class="collection with-header">
             <li class="collection-header"><h4>Fragebögen</h4></li>
             <li class="collection-item" ng-repeat="category in $ctrl.categories">
@@ -17,20 +34,5 @@
                 </div>
             </li>
         </ul>
-    </div>
-    <div class="section">
-        <div class="card">
-            <div class="card-content">
-                <h4>Erstellen</h4>
-                <div class="input-field row">
-                    <input class="input-normal col s8 m10 l10" placeholder="Fragebogen" ng-model="newCategory">
-                    <div class="s4 m2 l2 center-align">
-                        <button class="btn btn-large" ng-click="$ctrl.add({category: newCategory});">
-                            <i class="material-icons">note_add</i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
