--- a/imports/ui/components/admin.question.details/admin.question.details.html
+++ b/imports/ui/components/admin.question.details/admin.question.details.html
@@ -2,7 +2,10 @@
     <div class="section">
         <ul class="collection with-header">
             <li class="collection-header"><h4>Fragen - Charakteristik</h4>
-                <button class="btn btn-large right" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></button>
+                <div class="fixed-action-btn horizontal hide-on-large-only">
+                    <a class="btn-floating btn-large waves-effect waves-light dark-blue" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></a>
+                </div>
+                <a class="btn-floating btn-large waves-effect waves-light dark-blue right hide-on-med-and-down" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></a>
             </li>
             <li  class="collection-item"  ng-repeat="questionsCharacteristic in $ctrl.questionsCharacteristics">
                 <div class="row">
