--- a/imports/ui/components/register/register.html
+++ b/imports/ui/components/register/register.html
@@ -1,9 +1,9 @@
 <div class="container login-container row">
-    <form class="col offset-m3 m6 offset-s1 s10" novalidate>
+    <form class="col offset-m3 m6 offset-s1 s10" name="register" ng-submit="register.$valid && $ctrl.register()" novalidate>
         <div class="row">
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" class="input-login validate" type="email"></div>
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
-            <div class="input-field col s12"><button class="waves-effect waves-light btn-large btn-login center-align" ng-click="$ctrl.register()" style="width:100%;">Register</button></div>
+            <div class="input-field col s12"><input type="submit" value="Registrieren" class="waves-effect waves-light btn-large btn-login" style="width:100%;"/></div>
         </div>
     </form>
 </div>
