--- a/imports/ui/components/admin.category/admin.category.html
+++ b/imports/ui/components/admin.category/admin.category.html
@@ -18,7 +18,7 @@
     </div>
     <div class="section">
         <ul class="collection with-header">
-            <li class="collection-header"><h4>Fragebögen</h4></li>
+            <li class="collection-header"><h4>Fragebogen</h4></li>
             <li class="collection-item" ng-repeat="category in $ctrl.categories">
                 <div class="input-field row">
                     <input placeholder="Fragebogen" class="input-normal col s4 m8 l9" ng-model="category.category"
