--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,9 @@
 
+@font-face {
+    font-family: chocolatte;
+    src: url(fonts/DKChocolatte.otf);
+}
+
 nav ul a,
 nav .brand-logo {
     color: white;
@@ -81,6 +86,15 @@ nav{
 }
 .input-normal{
     color: #333 !important;
+}
+.logo{
+    height: 60px;
+    padding-top: 4px;
+}
+.logo-text{
+    font-family: chocolatte;
+    font-size: 2.8em !important;
+    top: -5px !important;
 }
 .input-normal:focus{
     border-bottom: 1px solid #333 !important;
