--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -1,6 +1,6 @@
 <nav role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" ui-sref="home" class="brand-logo right logo-text">Personal Finder</a>
+        <a id="logo-container" ui-sref="home" class="brand-logo right logo-text">MyVal</a>
         <ul class="left hide-on-med-and-down">
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
