--- a/imports/ui/components/admin.evaluation/admin.evaluation.html
+++ b/imports/ui/components/admin.evaluation/admin.evaluation.html
@@ -1,8 +1,9 @@
 <div class="container">
     <div class="section">
         <ul class="collection with-header">
-            <li class="collection-header"><h4>Evaluierung</h4></li>
-            <li class="collection-item" ng-repeat="user in $ctrl.users">
+            <li class="collection-header"><h4>Evaluierung</h4>
+            <h5>{{$ctrl.user.emails[0].address}}</h5></li>
+            <li class="collection-item">
                 {{user}}
             </li>
         </ul>
