--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -5,9 +5,9 @@
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Admin Kategorie</a></li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Admin Users</a></li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Admin Charakteristik</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Kategorie</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Users</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Charakteristik</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="login" ng-click="$ctrl.logout()">Logout</a></li>
@@ -18,9 +18,9 @@
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
             </li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Admin Kategorie</a></li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Admin Users</a></li>
-            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Admin Charakteristik</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Kategorie</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Users</a></li>
+            <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Charakteristik</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ng-click="$ctrl.logout()">Logout</a></li>
