display Question on question details

--- a/imports/ui/components/admin.question.details/admin.question.details.html
+++ b/imports/ui/components/admin.question.details/admin.question.details.html
@@ -6,6 +6,7 @@
                     <a class="btn-floating btn-large waves-effect waves-light dark-blue" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></a>
                 </div>
                 <a class="btn-floating btn-large waves-effect waves-light dark-blue right hide-on-med-and-down" ng-click="$ctrl.back()"><i class="material-icons">keyboard_return</i></a>
+                <p>{{$ctrl.question.question}}</p>
             </li>
             <li  class="collection-item"  ng-repeat="questionsCharacteristic in $ctrl.questionsCharacteristics">
                 <div class="row">
