--- a/imports/ui/components/impressum/impressum.html
+++ b/imports/ui/components/impressum/impressum.html
@@ -48,7 +48,9 @@
                         <p> Dieses Impressum wurde am <strong>15.12.2016</strong> mit dem Impressum-Generator <strong><a
                                 href="http://www.bag.ch/impressum-generator">http://www.bag.ch/impressum-generator</a></strong> der
                             Firma Brunner Medien AG, Druck und Medien, in Kriens erstellt. Die Brunner Medien AG, Druck und Medien,
-                            in Kriens übernimmt keine Haftung. </p>
+                            in Kriens übernimmt keine Haftung. </p><br>
+                        <b>Bilder</b>
+                        <p>Das Hintergrund Bild stammt von <a href="https://unsplash.com/@roxane">Roxane Clediere</a></p>
                 </div>
             </div>
         </div>
