--- a/imports/ui/components/profile/profile.html
+++ b/imports/ui/components/profile/profile.html
@@ -14,6 +14,17 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12">
+                <div class="card-content">
+                    <h4>Beschreibung</h4>
+                    <ul class="collapsible" data-collapsible="accordion" style="margin:0">
+                        <li ng-repeat="characteristic in $ctrl.characteristics">
+                            <div class="collapsible-header"><i class="material-icons">person_pin</i>{{characteristic.characteristic}}</div>
+                            <div class="collapsible-body white-text" style="background-color:#333;"><p>{{characteristic.description}}</p></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
