--- a/imports/ui/components/admin.characteristic/admin.characteristic.html
+++ b/imports/ui/components/admin.characteristic/admin.characteristic.html
@@ -7,7 +7,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s12" placeholder="Charakteristik"
                                ng-model="$ctrl.newCharacteristic" ng-required="true">
-                        <textarea class="materialize-textarea col m8 m10 l10" placeholder="Beschreibung" ng-required="true" ng-model="$ctrl.characteristicDescription"></textarea>
+                        <textarea class="materialize-textarea input-normal col m8 m10 l10" placeholder="Beschreibung" ng-required="true" ng-model="$ctrl.characteristicDescription"></textarea>
                         <div class="s4 m2 l2 center-align">
                             <button class="btn btn-large" type="submit"
                                     ng-click="$ctrl.add({characteristic: $ctrl.newCharacteristic,description:$ctrl.characteristicDescription});">
@@ -27,7 +27,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s8 m10 l10" placeholder="Charakteristik"
                                ng-model="characteristic.characteristic" ng-change="$ctrl.update(characteristic)">
-                        <textarea class="materialize-textarea col m8 m10 l10" placeholder="Beschreibung" ng-required="true" ng-model="characteristic.description"
+                        <textarea class="materialize-textarea input-normal col m8 m10 l10" placeholder="Beschreibung" ng-required="true" ng-model="characteristic.description"
                         ng-change="$ctrl.update(characteristic)"></textarea>
                         <div class="s4 m2 l2 center-align">
                             <button class="btn btn-large"
